# MedMatch_App

./: .flake8  .gitignore  DATA_MIGRATION_README.md  MIGRATION_SUMMARY.md  README.md  app.py  create_sample_data.py  main.py  pyproject.toml  requirements.txt  start_app.sh  verify_data_format.py
.claude/: settings.local.json
.github/: copilot-instructions.md  pull_request_template.md
.streamlit/: config.toml
data/processed/: Combined_Contacts_and_Reviews.parquet  Geocoded_Contacts.parquet  cleaned_contacts.parquet  cleaned_reviews.parquet  data_auto_update_status.txt  geocode_cache.csv  geocode_cache.json  medmatch.duckdb  zip_centroids.csv
docs/: AI_ASSISTANTS_GUIDE.md  ARCHITECTURE.md
docs/superpowers/plans/: 2026-05-10-search-improvements.md  (+7 more)
pages/: 10_🛠️_How_It_Works.py  1_🔎_Search.py  20_📊_Data_Dashboard.py  2_📄_Results.py  30_🔄_Update_Data.py
prepare_contacts/: 1__Cleaning_Provider_List.ipynb  1__Cleaning_Providers_List.py  2__Contact_Geocoding_New.ipynb  2__clean_and_build_db.py  3__Cleaning_Reviews.ipynb  3__geocode_addresses.py  4__Combining_Contacts_and_Reviews.ipynb  Cleaning_Preferred_Providers.ipynb
scripts/: geocode_providers.py
src/: app_logic.py
src/components/: search_assistant.py
src/data/: __init__.py  ingestion.py
src/utils/: __init__.py  cleaning.py  config.py  geocoding.py  io_utils.py  llm.py  providers.py  scoring.py
tests/: conftest.py
tests/components/: test_search_assistant.py
tests/prepare_contacts/: test_clean_and_build_db.py  test_geocode_addresses.py
tests/utils/: test_geocoding.py  test_llm.py  test_scoring.py
(+8 files in other folders)
