[project]
name = "medmatch-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.28.0",
    "cachetools>=5.0.7",
    "geopy>=2.3.0",
    "numpy>=1.23.0",
    "openpyxl>=3.0.10",
    "pandas>=1.5.0",
    "plotly>=5.0.0",
    "pyarrow>=8.0.0",
    "pydeck>=0.9.1",
    "python-docx>=0.8.11",
    "streamlit>=1.18.0",
    "tqdm>=4.67.1",
    "watchdog>=6.0.0",
]
